RESOLVED FIXED132475
Fix crash in WebKit client app when zooming
https://bugs.webkit.org/show_bug.cgi?id=132475
Summary Fix crash in WebKit client app when zooming
Simon Fraser (smfr)
Reported 2014-05-02 11:37:22 PDT
Fix crash in WebKit client app when zooming
Attachments
Patch (2.12 KB, patch)
2014-05-02 11:38 PDT, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2014-05-02 11:38:44 PDT
Simon Fraser (smfr)
Comment 2 2014-05-02 11:39:09 PDT
WebKit Commit Bot
Comment 3 2014-05-03 12:14:25 PDT
Comment on attachment 230677 [details] Patch Clearing flags on attachment: 230677 Committed r168226: <http://trac.webkit.org/changeset/168226>
WebKit Commit Bot
Comment 4 2014-05-03 12:14:28 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.