Fix crash in WebKit client app when zooming https://bugs.webkit.org/show_bug.cgi?id=132475 <rdar://problem/16703405>

Reviewed by Tim Horton.

It's possible for a WebTiledBackingLayer CALayer to remain in the CALayer
hierarchy after we've called -invalidate on it, which clears the _tileController.
Project the getters against null derefs to handle this.

* platform/graphics/ca/mac/WebTiledBackingLayer.mm:
(-[WebTiledBackingLayer isOpaque]):
(-[WebTiledBackingLayer acceleratesDrawing]):
(-[WebTiledBackingLayer contentsScale]):


Canonical link: https://commits.webkit.org/150550@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@168226 268f45cc-cd09-0410-ab3c-d52691b4dbfc